fix original column text overflow

--- a/ClientApp/src/app/components/localization-search/localization-search.component.scss
+++ b/ClientApp/src/app/components/localization-search/localization-search.component.scss
@@ -40,8 +40,6 @@
 
 .translation-content-cell {
     max-height: 180px;
-    height: 100%;
-    align-items: center;
 }
 
 .header-content-cell {
