--- a/ClientApp/src/app/components/localization/localization.component.scss
+++ b/ClientApp/src/app/components/localization/localization.component.scss
@@ -116,8 +116,6 @@
 
 .translation-content-cell {
     max-height: 180px;
-    height: 100%;
-    align-items: center;
 }
 
 .header-content-cell {
